# enjambre-worker

./: .gitignore  Cargo.toml  README.txt  admin.html  config.toml  config.toml.example  install-cuda-only.ps1  install-gpu.ps1  installer.iss  relay.py  relay_test.py  relay_test2.py  relay_test3.py  tunnel-relay.py
frontend/: index.html
installer/: installer.iss
src/: api.rs  client.rs  debug_relay.py  download.rs  error.rs  hardware.rs  keys.rs  lib.rs  main.rs  master.rs  minimal_relay.py  panel.rs  process.rs  simple_relay.py  start_relay.sh  state.rs  stats.rs  test_correct.py  test_minimal.py  test_relay2.py  tray.rs  tunnel-relay.py  tunnel.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icon.ps1
src-tauri/src/: main.rs
