[workspace]
resolver = "2"
members = ["src-tauri"]

[package]
name = "worker-node-core"
version = "0.5.1"
edition = "2021"
description = "Worker Node Core — library for Enjambre distributed LLM inference"

[lib]
name = "worker_node_core"
path = "src/lib.rs"

[[bin]]
name = "master-node"
path = "src/bin/master.rs"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

dirs = "5.0"

reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "stream"] }

zip = "2"

thiserror = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

sysinfo = "0.33"

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
socket2 = "0.6"

# Pin time to avoid breaking API change after 0.3.14 (cookie compat)
time = ">=0.3, <0.3.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "handleapi",
    "jobapi2",
    "libloaderapi",
    "minwinbase",
    "minwindef",
    "processthreadsapi",
    "shellapi",
    "synchapi",
    "timezoneapi",
    "winbase",
    "winerror",
    "wingdi",
    "winnt",
    "winreg",
    "winuser",
] }
winreg = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
