[package]
name = "worker-node"
version = "0.5.1"
edition = "2021"
description = "Worker Node — Tauri desktop UI for Enjambre distributed LLM inference"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
worker-node-core = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"
sysinfo = "0.33"

# Pin time to avoid breaking API change after 0.3.14 (cookie compat)
time = ">=0.3, <0.3.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "synchapi",
    "winerror",
    "winuser",
] }
